modules/gdscript/tests/scripts/parser/errors/redefine_local_constant_with_keyword.gd
func test():
	final TEST = 25

	# Error here (can't redeclare a constant on the same scope).
	final TEST = 50
